# joat

./: .bazelrc  .gitignore  BUILD.bazel  Gopkg.toml  Makefile  WORKSPACE  docker-compose.yml  package.json  workspace-status.sh
_build/rules/: vue.bzl
cli/cmd/: BUILD.bazel  config_set.go  const.go  controller.go  root.go  worker.go
cli/joat/: BUILD.bazel  main.go
client/: BUILD.bazel
cluster/: BUILD.bazel  cluster.go
cmd/: BUILD.bazel  config.go  const.go  controller.go  initialize.go  version.go  worker.go
controller/: BUILD.bazel  controller.go  http.go  repository.go  rpc.go
controller/middleware/: BUILD.bazel  static_asset.go
controller/webui/: BUILD.bazel  assets_stub.go  package.json
controller/webui/public/: index.html
controller/webui/src/: App.vue  main.ts
datastore/: BUILD.bazel  db.go  repository.go
datastore/codec/: BUILD.bazel
internal/cluster/: BUILD.bazel  cluster.go
internal/datastore/: BUILD.bazel  db.go
internal/datastore/codec/: BUILD.bazel
internal/rpc/: BUILD.bazel  rpc.proto
internal/util/fs/: BUILD.bazel  fs.go
internal/util/hash/: BUILD.bazel  hash.go
internal/util/httpio/: BUILD.bazel  httpio.go
internal/util/jsonx/: BUILD.bazel  jsonx.go
internal/util/random/: BUILD.bazel  random.go
internal/util/validate/: BUILD.bazel  validate.go
plugin/: BUILD.bazel  plugin.go
rpc/: BUILD.bazel
store/: db.go
store/codec/: jsoniter.go
util/: BUILD.bazel  crypto.go  filesystem.go  json.go  uuid.go
webui/: BUILD.bazel  index.html  main.ts
webui/app/: BUILD.bazel  index.html  index.ts
worker/: BUILD.bazel  rpc.go  worker.go
