load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
    prefix = "github.com/ubiqueworks/joat",
)

container_bundle(
    name = "package",
    images = {
        "ubiqueworks/joat:{APP_VERSION}": "//cli/joat:docker-image",
    },
    stamp = True,
)
