load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")

# gazelle:exclude node_modules

gazelle(
    name = "gazelle",
    command = "fix",
    external = "vendored",
    prefix = "github.com/ubiqueworks/joat",
)

container_bundle(
    name = "package",
    images = {
        "ubiqueworks/joat:{APP_VERSION}": "//cli/joat:docker-image",
    },
    stamp = True,
)

# NOTE: this will move to node_modules/BUILD in a later release
filegroup(
    name = "node_modules",
    srcs = glob([
        "node_modules/**/*.js",
        "node_modules/**/*.d.ts",
        "node_modules/**/*.json",
    ]),
    visibility = ["//visibility:public"],
)
