load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cluster.go"],
    importpath = "github.com/ubiqueworks/joat/cluster",
    visibility = ["//visibility:public"],
    deps = [
        "//util:go_default_library",
        "//vendor/github.com/hashicorp/serf/serf:go_default_library",
        "//vendor/github.com/rs/zerolog/log:go_default_library",
    ],
)
