load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "controller.go",
        "http.go",
        "rpc.go",
    ],
    importpath = "github.com/ubiqueworks/joat/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//cluster:go_default_library",
        "//rpc:go_default_library",
        "//util:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/go-chi/chi/middleware:go_default_library",
        "//vendor/github.com/rs/zerolog/log:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
