load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["plugin.go"],
    importpath = "github.com/ubiqueworks/joat/plugin",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/asdine/storm:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
    ],
)
