#package(default_visibility = ["//visibility:public"])
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_devserver")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")

exports_files(["tsconfig.json"])

# NOTE: this will move to node_modules/BUILD in a later release
filegroup(
    name = "template",
    srcs = glob(["**/*.html"]),
    visibility = ["//visibility:public"],
)

ts_library(
    name = "app",
    srcs = ["main.ts"],
    tsconfig = ":tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        #        ":modules",
        "//webui/app:library",
    ],
)

# ts_library(
#     name = "modules",
#     srcs = glob(["*.d.ts"]),
#     visibility = ["//visibility:public"],
# )

# ts_devserver(
#     name = "devserver",
#     deps = [":app"],
#     entry_module = "//webui",
#     # This is the path we'll request from the browser, see index.html
#     serving_path = "/bundle.js",
#     # The devserver can serve our static files too
#     static_files = ["index.html"],
# )

rollup_bundle(
    name = "bundle",
    entry_point = "webui/main",
    deps = [
        ":app",
        ":template",
    ],
)
