load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "rpc.go",
        "worker.go",
    ],
    importpath = "github.com/ubiqueworks/joat/worker",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/cluster:go_default_library",
        "//internal/rpc:go_default_library",
        "//vendor/github.com/docker/docker/client:go_default_library",
        "//vendor/github.com/rs/zerolog/log:go_default_library",
        "//vendor/google.golang.org/grpc:go_default_library",
    ],
)
