load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ubiqueworks/joat/cli/joat",
    visibility = ["//visibility:public"],
    deps = ["//cmd:go_default_library"],
)

go_binary(
    name = "joat",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "docker-image",
    binary = ":joat",
    visibility = ["//visibility:public"],
)
