load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["static_asset.go"],
    importpath = "github.com/ubiqueworks/joat/controller/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//controller/webui:go_default_library",
        "//vendor/github.com/rs/zerolog/log:go_default_library",
    ],
)
