load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hash.go"],
    importpath = "github.com/ubiqueworks/joat/internal/util/hash",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/golang.org/x/crypto/bcrypt:go_default_library"],
)
