load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["jsonx.go"],
    importpath = "github.com/ubiqueworks/joat/internal/util/jsonx",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/json-iterator/go:go_default_library"],
)
